...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hPU-SF-ANN">
                                                <rect key="frame" x="0.0" y="75" width="80" height="30"/>
                                                <state key="normal" title="editar"/>
                                                <connections>
                                                    <segue destination="mav-G4-Haf" kind="popoverPresentation" identifier="" popoverAnchorView="hPU-SF-ANN" id="OHf-Ml-JNs">
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Gt-c4-Kfm">
                                                <rect key="frame" x="0.0" y="0.0" width="79" height="30"/>
                                                <state key="normal" title="Mis objetos"/>
                                                <connections>
                                                    <segue destination="AsU-sZ-PUh" kind="popoverPresentation" popoverAnchorView="8Gt-c4-Kfm" id="aQP-ec-vJE">
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0sD-K4-UTL">
                                                <rect key="frame" x="0.0" y="66" width="119" height="30"/>
                                                <state key="normal" title="Objetos rentados"/>
                                                <connections>
                                                    <segue destination="Uyb-yo-vD4" kind="popoverPresentation" popoverAnchorView="0sD-K4-UTL" id="wB6-8b-Gjo">
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6re-yo-l69">
                                                <rect key="frame" x="0.0" y="198" width="43" height="30"/>
                                                <state key="normal" title="Ayuda"/>
                                                <connections>
                                                    <segue destination="jrk-Nm-Ifd" kind="popoverPresentation" popoverAnchorView="6re-yo-l69" id="tFx-lE-3C0">
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SdQ-Aq-mPu">
                                                <rect key="frame" x="0.0" y="264" width="97" height="30"/>
                                                <state key="normal" title="Configuración"/>
                                                <connections>
                                                    <segue destination="e04-xy-9fp" kind="popoverPresentation" popoverAnchorView="SdQ-Aq-mPu" id="R6A-MG-CyY">
...
                    </view>
                    <navigationItem key="navigationItem" id="igf-cb-MaO">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="hamburgerMenu" id="9gb-lm-svK">
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <state key="normal" image="facebook">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
