...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <connections>
                            <outlet property="dataSource" destination="bHf-c7-xaG" id="Kwf-CS-4Xg"/>
                            <outlet property="delegate" destination="bHf-c7-xaG" id="nir-rg-sG5"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Mis Rentados" id="h7r-X9-IyW">
                        <barButtonItem key="leftBarButtonItem" title="Back" id="eJe-tq-5ZT">
                            <connections>
                                <action selector="backButtonTapped:" destination="bHf-c7-xaG" id="1jn-o8-Zk6"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
