...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YNJ-NH-Ic0">
                                                                <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="width" secondItem="YNJ-NH-Ic0" secondAttribute="height" multiplier="200:200" id="43y-pL-zo8"/>
                                                                    <constraint firstAttribute="width" constant="90" id="qxd-sd-ACl"/>
                                                                </constraints>
                                                                <state key="normal" title="Button" image="add-camera"/>
                                                                <connections>
                                                                    <action selector="addNewImageButtonTapped:" destination="mqS-tN-Drz" eventType="touchUpInside" id="gWU-YQ-iqa"/>
                                                                </connections>
                                                            </button>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q0r-J0-dTk">
                                                                <rect key="frame" x="95" y="0.0" width="90" height="90"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Título" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IMF-Et-sU3">
                                                        <rect key="frame" x="0.0" y="0.0" width="38.5" height="18"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ej. Martillo Cat" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="znj-nF-8sy">
                                                        <rect key="frame" x="0.0" y="18" width="280" height="39"/>
                                                        <nil key="textColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                    </textField>
                                                </subviews>
...
